# perp-dex-tools

./: .gitignore  DEPLOYMENT_SUMMARY.md  INTEGRATION_EXAMPLES.md  QUICK_START_GUIDE.md  README.md  README_EN.md  SECURITY_IMPROVEMENTS.md  arbitrage_config.json  env_example.txt  hedge_mode.py  hedge_requirements.txt  hedge_strategy.py  improved_arbitrage_engine.py  install_security.sh  pyproject.toml  requirements.txt  run_hedge_strategy.py  runbot.py  test_para.py  test_paradex_market.py  todolist.md  trading_bot.py
.venv311/: pyvenv.cfg
exchanges/: apex.py  aster.py  backpack.py  bp_client.py  ethereal.py  extended.py  factory.py  grvt.py  lighter.py  lighter_custom_websocket.py  paradex.py  paradex_simple.py  standx.py
hedge/: hedge_mode_apex.py  hedge_mode_bp.py  hedge_mode_edgex.py  hedge_mode_ext.py  hedge_mode_grvt.py  hedge_mode_grvt_aster.py  hedge_mode_grvt_grvt.py  hedge_mode_grvt_v2.py  hedge_mode_nado.py  hedge_mode_standx.py
helpers/: grvt_trasfer.py  lighter_ws.py  logger.py
security/: __init__.py  integration_helper.py  rate_limiter.py  risk_manager.py  secure_key_manager.py
tests/: test_risk_control.py
