[project]
name = "perp-dex-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grvt-pysdk>=0.1.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "pytz>=2024.1",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
]
